# simple_splines

./: CMakeLists.txt  README.md  package.xml
include/simple_splines/: process_path_points.h  simple_splines.h  vis_functions.h
rviz/: simple_spline.rviz
src/: simple_splines.cpp
