<?xml version="1.0"?>
<package format="2">
  <name>simple_splines</name>
  <version>0.1.0</version>
  <description>
    This package provides an implementation of purepursuit path tracking algorithm. The purepursuit tracker send                            velocity commands to the base, inorder to track the given plan(currently support only global plan and no
    obstacle avoidance.
  </description>
  <author></author>
  <maintainer email="botsync@botsync.co">botsync</maintainer>
  <license>BSD</license>
  <url>http://www.botsync.co</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

 
</package>


